2005-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_hrules):
	hrule-legend-X is now a leaf parameter, not view

	* templates/default-recursivedir.html: Recursive directory view

2005-04-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/schedulerinfo.in: Timeline reports separate for monitors
	and collectors

2005-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Paradyne.pm:
	New discovery parameter: "Paradyne::slot-name"

2005-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: New variables: plugwrapperdir, defrrddir

2005-03-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover): Screening coli and
	semicoli in legend text

2005-03-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	New device capability: 'interfaceIndexingManaged'.
	New DDX parameters: 'RFC2863_IF_MIB::ifindex-map-hint'
	and 'RFC2863_IF_MIB::subtree-name-hint'.

	* xmlconfig/generic/rfc2863.if-mib.xml: Moved "ifindex-table"
	definition from snmp-defs to IF-MIB host template

	* perllib/Torrus/DevDiscover.pm (discover):
	In the legend, replace ':' with '=' and ';' with ','

2005-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (oidBaseMatch): better OID comparison

2005-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer.pm (newCacheFileName): MD5 to generate
	unique file names

2005-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac (also in all plugins): AM_INIT_AUTOMAKE(1.9)
	instead of 1.6. The old version conflicted with plugins.

2005-01-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* doc/Makefile.am: Variable substitution in doc files

	* doc/manpages/Makefile.am: Man sections configurable
